Ass/y.output
Terminals unused in grammar

    MOD
    ID1
    ID2
    EQUAL
    SWITCH
    CASE
    DEFAULT
    MAIN
    LBRACKET
    RBRACKET
    SLCOMMENT
    MLCOMMENT
    CHARFORMAT
    INTFORMAT
    FLOATFORMAT
    ARR_EHAI
    SPACE


State 19 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: statement

    2 statement: FUNCTION statement
    3          | FUNCTION

    4 TYPE: INT
    5     | FLOAT
    6     | CHAR
    7     | VOID

    8 FUNCTION: TYPE ID LPAREN RPAREN LBRACE STATEMENT_LIST RBRACE
    9         | TYPE ID LPAREN PARAMETER_LIST RPAREN LBRACE STATEMENT_LIST RBRACE

   10 PARAMETER_LIST: TYPE ID COMMA PARAMETER_LIST
   11               | TYPE ID

   12 STATEMENT_LIST: STATEMENT STATEMENT_LIST
   13               | STATEMENT
   14               | LBRACE STATEMENT_LIST RBRACE
   15               | LBRACE STATEMENT_LIST RBRACE STATEMENT_LIST

   16 STATEMENT: PRINT_STATEMENTS
   17          | RETURN_STATEMENTS
   18          | FUNCTION_CALLSTMTS
   19          | CONTINUE SEMICOLON
   20          | BREAK SEMICOLON
   21          | ARRAY_DECLSTMTS
   22          | IF_STATEMENT
   23          | WHILE_STATEMENT
   24          | FOR_STATEMENT
   25          | EXPRESSION
   26          | ASGNSTMT SEMICOLON
   27          | DECLARATION SEMICOLON
   28          | SEMICOLON

   29 PRINT_STATEMENTS: PRINTF LPAREN STRING RPAREN SEMICOLON
   30                 | PRINTF LPAREN STRING COMMA VARIABLE_LIST RPAREN SEMICOLON

   31 RETURN_STATEMENTS: RETURN ID SEMICOLON
   32                  | RETURN SEMICOLON
   33                  | RETURN CONST SEMICOLON

   34 CONST: NUM
   35      | FLOATNUM
   36      | CHARCONST
   37      | CONST_SIGNED

   38 FUNCTION_CALLSTMTS: ID LPAREN RPAREN SEMICOLON
   39                   | ID ASSIGNMENT ID LPAREN RPAREN SEMICOLON
   40                   | TYPE ID ASSIGNMENT ID LPAREN ULTIMATE_LIST RPAREN SEMICOLON
   41                   | ID ASSIGNMENT ID LPAREN ULTIMATE_LIST RPAREN SEMICOLON
   42                   | ID LPAREN ULTIMATE_LIST RPAREN SEMICOLON
   43                   | TYPE ID ASSIGNMENT ID LPAREN RPAREN SEMICOLON

   44 ULTIMATE_LIST: ID COMMA ULTIMATE_LIST
   45              | CONST COMMA ULTIMATE_LIST
   46              | ID
   47              | CONST

   48 ARRAY_DECLSTMTS: TYPE TDARR SEMICOLON
   49                | TYPE ARR ASSIGNMENT LBRACE CONSTANT_LIST RBRACE SEMICOLON
   50                | TYPE TDARR ASSIGNMENT LBRACE ANOTHERCONST_LIST RBRACE SEMICOLON
   51                | TYPE ARR SEMICOLON

   52 ANOTHERCONST_LIST: LBRACE CONSTANT_LIST RBRACE
   53                  | LBRACE CONSTANT_LIST RBRACE COMMA ANOTHERCONST_LIST

   54 CONSTANT_LIST: INTEGER_WALI_LIST
   55              | FLOAT_WALI_LIST
   56              | CHAR_WALI_LIST

   57 INTEGER_WALI_LIST: INT COMMA INTEGER_WALI_LIST
   58                  | INT

   59 FLOAT_WALI_LIST: FLOAT COMMA FLOAT_WALI_LIST
   60                | FLOAT

   61 CHAR_WALI_LIST: CHAR COMMA CHAR_WALI_LIST
   62               | CHAR

   63 FOR_STATEMENT: FOR LPAREN DECLARATION SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE
   64              | FOR LPAREN ASGNSTMT SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE
   65              | FOR LPAREN SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE

   66 DECLARATION: TYPE ID ASSIGNMENT EXPRESSION DECLARATION_LIST
   67            | TYPE ID DECLARATION_LIST

   68 DECLARATION_LIST: COMMA ID DECLARATION_LIST
   69                 | COMMA ID ASSIGNMENT EXPRESSION DECLARATION_LIST
   70                 | %empty

   71 VARIABLE_LIST: ID COMMA VARIABLE_LIST
   72              | ID

   73 IF_STATEMENT: MATCHED
   74             | UNMATCHED

   75 MATCHED: IF LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE

   76 UNMATCHED: IF LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE ELSE LBRACE STATEMENT_LIST RBRACE

   77 WHILE_STATEMENT: WHILE LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE

   78 ASGNSTMT: ID ASSIGNMENT EXPRESSION ASGNSTMT_LIST

   79 ASGNSTMT_LIST: COMMA ID ASSIGNMENT EXPRESSION ASGNSTMT_LIST
   80              | %empty

   81 EXPRESSION: EXPRESSION Comperator TREEM
   82           | TREEM

   83 TREEM: TREEM PLUS TREEM2
   84      | TREEM MINUS TREEM2
   85      | TREEM MULT TREEM2
   86      | TREEM DIV TREEM2
   87      | TREEM2

   88 TREEM2: ID
   89       | CONST
   90       | LPAREN EXPRESSION RPAREN

   91 Comperator: NOTEQ
   92           | LT
   93           | GT
   94           | LTE
   95           | GTE
   96           | LAND
   97           | LOR
   98           | LNOT
   99           | EQUALS


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS (258) 83
    MINUS (259) 84
    MULT (260) 85
    DIV (261) 86
    MOD (262)
    ID (263) 8 9 10 11 31 38 39 40 41 42 43 44 46 66 67 68 69 71 72 78 79 88
    ID1 (264)
    ID2 (265)
    EQUAL (266)
    NOTEQ (267) 91
    LT (268) 92
    GT (269) 93
    LTE (270) 94
    GTE (271) 95
    LAND (272) 96
    LOR (273) 97
    LNOT (274) 98
    EQUALS (275) 99
    IF (276) 75 76
    ELSE (277) 76
    WHILE (278) 77
    FOR (279) 63 64 65
    SWITCH (280)
    CASE (281)
    BREAK (282) 20
    DEFAULT (283)
    CONTINUE (284) 19
    RETURN (285) 31 32 33
    INT (286) 4 57 58
    FLOAT (287) 5 59 60
    CHAR (288) 6 61 62
    VOID (289) 7
    MAIN (290)
    PRINTF (291) 29 30
    NUM (292) 34
    FLOATNUM (293) 35
    CHARCONST (294) 36
    CONST_SIGNED (295) 37
    LPAREN (296) 8 9 29 30 38 39 40 41 42 43 63 64 65 75 76 77 90
    RPAREN (297) 8 9 29 30 38 39 40 41 42 43 63 64 65 75 76 77 90
    LBRACE (298) 8 9 14 15 49 50 52 53 63 64 65 75 76 77
    RBRACE (299) 8 9 14 15 49 50 52 53 63 64 65 75 76 77
    LBRACKET (300)
    RBRACKET (301)
    SEMICOLON (302) 19 20 26 27 28 29 30 31 32 33 38 39 40 41 42 43 48 49 50 51 63 64 65
    COMMA (303) 10 30 44 45 53 57 59 61 68 69 71 79
    SLCOMMENT (304)
    MLCOMMENT (305)
    CHARFORMAT (306)
    INTFORMAT (307)
    FLOATFORMAT (308)
    ARR (309) 49 51
    TDARR (310) 48 50
    ARR_EHAI (311)
    SPACE (312)
    ASSIGNMENT (313) 39 40 41 43 49 50 66 69 78 79
    STRING (314) 29 30


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    start (61)
        on left: 1
        on right: 0
    statement (62)
        on left: 2 3
        on right: 1 2
    TYPE (63)
        on left: 4 5 6 7
        on right: 8 9 10 11 40 43 48 49 50 51 66 67
    FUNCTION (64)
        on left: 8 9
        on right: 2 3
    PARAMETER_LIST (65)
        on left: 10 11
        on right: 9 10
    STATEMENT_LIST (66)
        on left: 12 13 14 15
        on right: 8 9 12 14 15 63 64 65 75 76 77
    STATEMENT (67)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 12 13
    PRINT_STATEMENTS (68)
        on left: 29 30
        on right: 16
    RETURN_STATEMENTS (69)
        on left: 31 32 33
        on right: 17
    CONST (70)
        on left: 34 35 36 37
        on right: 33 45 47 89
    FUNCTION_CALLSTMTS (71)
        on left: 38 39 40 41 42 43
        on right: 18
    ULTIMATE_LIST (72)
        on left: 44 45 46 47
        on right: 40 41 42 44 45
    ARRAY_DECLSTMTS (73)
        on left: 48 49 50 51
        on right: 21
    ANOTHERCONST_LIST (74)
        on left: 52 53
        on right: 50 53
    CONSTANT_LIST (75)
        on left: 54 55 56
        on right: 49 52 53
    INTEGER_WALI_LIST (76)
        on left: 57 58
        on right: 54 57
    FLOAT_WALI_LIST (77)
        on left: 59 60
        on right: 55 59
    CHAR_WALI_LIST (78)
        on left: 61 62
        on right: 56 61
    FOR_STATEMENT (79)
        on left: 63 64 65
        on right: 24
    DECLARATION (80)
        on left: 66 67
        on right: 27 63
    DECLARATION_LIST (81)
        on left: 68 69 70
        on right: 66 67 68 69
    VARIABLE_LIST (82)
        on left: 71 72
        on right: 30 71
    IF_STATEMENT (83)
        on left: 73 74
        on right: 22
    MATCHED (84)
        on left: 75
        on right: 73
    UNMATCHED (85)
        on left: 76
        on right: 74
    WHILE_STATEMENT (86)
        on left: 77
        on right: 23
    ASGNSTMT (87)
        on left: 78
        on right: 26 63 64 65
    ASGNSTMT_LIST (88)
        on left: 79 80
        on right: 78 79
    EXPRESSION (89)
        on left: 81 82
        on right: 25 63 64 65 66 69 75 76 77 78 79 81 90
    TREEM (90)
        on left: 83 84 85 86 87
        on right: 81 82 83 84 85 86
    TREEM2 (91)
        on left: 88 89 90
        on right: 83 84 85 86 87
    Comperator (92)
        on left: 91 92 93 94 95 96 97 98 99
        on right: 81


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    start      go to state 5
    statement  go to state 6
    TYPE       go to state 7
    FUNCTION   go to state 8


State 1

    4 TYPE: INT .

    $default  reduce using rule 4 (TYPE)


State 2

    5 TYPE: FLOAT .

    $default  reduce using rule 5 (TYPE)


State 3

    6 TYPE: CHAR .

    $default  reduce using rule 6 (TYPE)


State 4

    7 TYPE: VOID .

    $default  reduce using rule 7 (TYPE)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 9


State 6

    1 start: statement .

    $default  reduce using rule 1 (start)


State 7

    8 FUNCTION: TYPE . ID LPAREN RPAREN LBRACE STATEMENT_LIST RBRACE
    9         | TYPE . ID LPAREN PARAMETER_LIST RPAREN LBRACE STATEMENT_LIST RBRACE

    ID  shift, and go to state 10


State 8

    2 statement: FUNCTION . statement
    3          | FUNCTION .

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 3 (statement)

    statement  go to state 11
    TYPE       go to state 7
    FUNCTION   go to state 8


State 9

    0 $accept: start $end .

    $default  accept


State 10

    8 FUNCTION: TYPE ID . LPAREN RPAREN LBRACE STATEMENT_LIST RBRACE
    9         | TYPE ID . LPAREN PARAMETER_LIST RPAREN LBRACE STATEMENT_LIST RBRACE

    LPAREN  shift, and go to state 12


State 11

    2 statement: FUNCTION statement .

    $default  reduce using rule 2 (statement)


State 12

    8 FUNCTION: TYPE ID LPAREN . RPAREN LBRACE STATEMENT_LIST RBRACE
    9         | TYPE ID LPAREN . PARAMETER_LIST RPAREN LBRACE STATEMENT_LIST RBRACE

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 13

    TYPE            go to state 14
    PARAMETER_LIST  go to state 15


State 13

    8 FUNCTION: TYPE ID LPAREN RPAREN . LBRACE STATEMENT_LIST RBRACE

    LBRACE  shift, and go to state 16


State 14

   10 PARAMETER_LIST: TYPE . ID COMMA PARAMETER_LIST
   11               | TYPE . ID

    ID  shift, and go to state 17


State 15

    9 FUNCTION: TYPE ID LPAREN PARAMETER_LIST . RPAREN LBRACE STATEMENT_LIST RBRACE

    RPAREN  shift, and go to state 18


State 16

    8 FUNCTION: TYPE ID LPAREN RPAREN LBRACE . STATEMENT_LIST RBRACE

    ID            shift, and go to state 19
    IF            shift, and go to state 20
    WHILE         shift, and go to state 21
    FOR           shift, and go to state 22
    BREAK         shift, and go to state 23
    CONTINUE      shift, and go to state 24
    RETURN        shift, and go to state 25
    INT           shift, and go to state 1
    FLOAT         shift, and go to state 2
    CHAR          shift, and go to state 3
    VOID          shift, and go to state 4
    PRINTF        shift, and go to state 26
    NUM           shift, and go to state 27
    FLOATNUM      shift, and go to state 28
    CHARCONST     shift, and go to state 29
    CONST_SIGNED  shift, and go to state 30
    LPAREN        shift, and go to state 31
    LBRACE        shift, and go to state 32
    SEMICOLON     shift, and go to state 33

    TYPE                go to state 34
    STATEMENT_LIST      go to state 35
    STATEMENT           go to state 36
    PRINT_STATEMENTS    go to state 37
    RETURN_STATEMENTS   go to state 38
    CONST               go to state 39
    FUNCTION_CALLSTMTS  go to state 40
    ARRAY_DECLSTMTS     go to state 41
    FOR_STATEMENT       go to state 42
    DECLARATION         go to state 43
    IF_STATEMENT        go to state 44
    MATCHED             go to state 45
    UNMATCHED           go to state 46
    WHILE_STATEMENT     go to state 47
    ASGNSTMT            go to state 48
    EXPRESSION          go to state 49
    TREEM               go to state 50
    TREEM2              go to state 51


State 17

   10 PARAMETER_LIST: TYPE ID . COMMA PARAMETER_LIST
   11               | TYPE ID .

    COMMA  shift, and go to state 52

    $default  reduce using rule 11 (PARAMETER_LIST)


State 18

    9 FUNCTION: TYPE ID LPAREN PARAMETER_LIST RPAREN . LBRACE STATEMENT_LIST RBRACE

    LBRACE  shift, and go to state 53


State 19

   38 FUNCTION_CALLSTMTS: ID . LPAREN RPAREN SEMICOLON
   39                   | ID . ASSIGNMENT ID LPAREN RPAREN SEMICOLON
   41                   | ID . ASSIGNMENT ID LPAREN ULTIMATE_LIST RPAREN SEMICOLON
   42                   | ID . LPAREN ULTIMATE_LIST RPAREN SEMICOLON
   78 ASGNSTMT: ID . ASSIGNMENT EXPRESSION ASGNSTMT_LIST
   88 TREEM2: ID .

    LPAREN      shift, and go to state 54
    ASSIGNMENT  shift, and go to state 55

    LPAREN    [reduce using rule 88 (TREEM2)]
    $default  reduce using rule 88 (TREEM2)


State 20

   75 MATCHED: IF . LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE
   76 UNMATCHED: IF . LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE ELSE LBRACE STATEMENT_LIST RBRACE

    LPAREN  shift, and go to state 56


State 21

   77 WHILE_STATEMENT: WHILE . LPAREN EXPRESSION RPAREN LBRACE STATEMENT_LIST RBRACE

    LPAREN  shift, and go to state 57


State 22

   63 FOR_STATEMENT: FOR . LPAREN DECLARATION SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE
   64              | FOR . LPAREN ASGNSTMT SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE
   65              | FOR . LPAREN SEMICOLON EXPRESSION SEMICOLON ASGNSTMT RPAREN LBRACE STATEMENT_LIST RBRACE

    LPAREN  shift, and go to state 58


State 23

   20 STATEMENT: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 24

   19 STATEMENT: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 25

   31 RETURN_STATEMENTS: RETURN . ID SEMICOLON
   32                  | RETURN . SEMICOLON
   33                  | RETURN . CONST SEMICOLON

    ID            shift, and go to state 61
    NUM           shift, and go to state 27
    FLOATNUM      shift, and go to state 28
    CHARCONST     shift, and go to state 29
    CONST_SIGNED  shift, and go to state 30
    SEMICOLON     shift, and go to state 62

    CONST  go to state 63


State 26

   29 PRINT_STATEMENTS: PRINTF . LPAREN STRING RPAREN SEMICOLON
   30                 | PRINTF . LPAREN STRING COMMA VARIABLE_LIST RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 27

   34 CONST: NUM .

    $default  reduce using rule 34 (CONST)


State 28

   35 CONST: FLOATNUM .

    $default  reduce using rule 35 (CONST)


State 29

   36 CONST: CHARCONST .

    $default  reduce using rule 36 (CONST)


State 30

   37 CONST: CONST_SIGNED .

    $default  reduce using rule 37 (CONST)


State 31

   90 TREEM2: LPAREN . EXPRESSION RPAREN

    ID            shift, and go to state 65
    NUM           shift, and go to state 27
    FLOATNUM      shift, and go to state 28
    CHARCONST     shift, and go to state 29
    CONST_SIGNED  shift, and go to state 30
    LPAREN        shift, and go to state 31

    CONST       go to state 39
    EXPRESSION  go to state 66
    TREEM       go to state 50
    TREEM2      go to state 51


State 32

   14 STATEMENT_LIST: LBRACE . STATEMENT_LIST RBRACE
   15               | LBRACE . STATEMENT_LIST RBRACE STATEMENT_LIST

    ID            shift, and go to state 19
    IF            shift, and go to state 20
    WHILE         shift, and go to state 21
    FOR           shift, and go to state 22
    BREAK         shift, and go to state 23
    CONTINUE      shift, and go to state 24
    RETURN        shift, and go to state 25
    INT           shift, and go to state 1
    FLOAT         shift, and go to state 2
    CHAR          shift, and go to state 3
    VOID          shift, and go to state 4
    PRINTF        shift, and go to state 26
    NUM           shift, and go to state 27
    FLOATNUM      shift, and go to state 28
    CHARCONST     shift, and go to state 29
    CONST_SIGNED  shift, and go to state 30
    LPAREN        shift, and go to state 31
    LBRACE        shift, and go to state 32
    SEMICOLON     shift, and go to state 33

    TYPE                go to state 34
    STATEMENT_LIST      go to state 67
    STATEMENT           go to state 36
    PRINT_STATEMENTS    go to state 37
    RETURN_STATEMENTS   go to state 38
    CONST               go to state 39
    FUNCTION_CALLSTMTS  go to state 40
    ARRAY_DECLSTMTS     go to state 41
    FOR_STATEMENT       go to state 42
    DECLARATION         go to state 43
    IF_STATEMENT        go to state 44
    MATCHED             go to state 45
    UNMATCHED           go to state 46
    WHILE_STATEMENT     go to state 47
    ASGNSTMT            go to state 48
    EXPRESSION          go to state 49
    TREEM               go to state 50
    TREEM2              go to state 51


State 33

   28 STATEMENT: SEMICOLON .

    $default  reduce using rule 28 (STATEMENT)


State 34
